# DocuMind

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: init-wiki.yml
docs/: ARCHITECTURE.md  DECISIONS.md
documind/: __init__.py  cli.py  config.py  documents.py  geometry.py  io_pdf.py  normalize.py  pipeline.py  schema.py  types.py  verify.py
documind/extract/: __init__.py  base.py  layout.py  ollama.py  openai_extractor.py  text.py
evals/: RESULTS.md  __init__.py  gate.py  harness.py  metrics.py
examples/: run_extractor.py
tests/: test_documents.py  test_extractors.py  test_geometry.py  test_metrics_and_cli.py  test_verify.py
